// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the round add button matches the snapshot 1`] = `
<button
  className="bYCSwQ"
  onClick={[Function]}
>
  ButtonValue
</button>
`;

exports[`the round add button with button type given matches the snapshot 1`] = `
<button
  className="bYCSwQ"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;
